--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -382,7 +382,8 @@
     "it": "意大利语",
     "nl": "荷兰语",
     "sv": "瑞典",
-    "zh": "中国人"
+    "zh": "中国人",
+    "pl": "波兰语"
   },
   "share": {
     "no_users_shared": "没有与之共享的用户",
