--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -27,7 +27,8 @@
 			"forest": "Forest",
 			"aestheticLight": "Aesthetic Light",
 			"aestheticDark": "Aesthetic Dark",
-			"aqua": "Aqua"
+			"aqua": "Aqua",
+			"northernLights": "Northern Lights"
 		}
 	},
 	"about": {
