--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -1,154 +1,155 @@
 {
   "navbar": {
-	"adventures": "Podróże",
-	"collections": "Kolekcje",
-	"worldtravel": "Podróże po świecie",
-	"map": "Mapa",
-	"users": "Użytkownicy",
-	"search": "Szukaj",
-	"profile": "Profil",
-	"greeting": "Cześć",
-	"my_adventures": "Moje podróże",
-	"my_tags": "Moje tagi",
-	"tag": "Tag",
-	"shared_with_me": "Udostępnione ze mną",
-	"settings": "Ustawienia",
-	"logout": "Wyloguj się",
-	"about": "O AdventureLog",
-	"documentation": "Dokumentacja",
-	"discord": "Discord",
-	"language_selection": "Wybór języka",
-	"support": "Wsparcie",
-	"theme_selection": "Wybór motywu",
-	"themes": {
-	  "light": "Jasny",
-	  "dark": "Ciemny",
-	  "night": "Nocny",
-	  "forest": "Leśny",
-	  "aestheticLight": "Estetyczny Jasny",
-	  "aestheticDark": "Estetyczny Ciemny",
-	  "aqua": "Aqua"
+    "adventures": "Podróże",
+    "collections": "Kolekcje",
+    "worldtravel": "Podróże po świecie",
+    "map": "Mapa",
+    "users": "Użytkownicy",
+    "search": "Szukaj",
+    "profile": "Profil",
+    "greeting": "Cześć",
+    "my_adventures": "Moje podróże",
+    "my_tags": "Moje tagi",
+    "tag": "Tag",
+    "shared_with_me": "Udostępnione ze mną",
+    "settings": "Ustawienia",
+    "logout": "Wyloguj się",
+    "about": "O AdventureLog",
+    "documentation": "Dokumentacja",
+    "discord": "Discord",
+    "language_selection": "Wybór języka",
+    "support": "Wsparcie",
+    "theme_selection": "Wybór motywu",
+    "themes": {
+      "light": "Jasny",
+      "dark": "Ciemny",
+      "night": "Nocny",
+      "forest": "Leśny",
+      "aestheticLight": "Estetyczny Jasny",
+      "aestheticDark": "Estetyczny Ciemny",
+      "aqua": "Aqua",
+      "northernLights": "Zorza Polarna"
     }
   },
   "about": {
-	"about": "O aplikacji",
-	"license": "Licencjonowane na licencji GPL-3.0.",
-	"source_code": "Kod źródłowy",
-	"message": "Stworzone z ❤️ w Stanach Zjednoczonych.",
-	"oss_attributions": "Atrybucje Open Source",
-	"nominatim_1": "Wyszukiwanie lokalizacji i geokodowanie zapewnia",
-	"nominatim_2": "Ich dane są licencjonowane na licencji ODbL.",
-	"other_attributions": "Dodatkowe atrybucje można znaleźć w pliku README.",
-	"close": "Zamknij"
+    "about": "O aplikacji",
+    "license": "Licencjonowane na licencji GPL-3.0.",
+    "source_code": "Kod źródłowy",
+    "message": "Stworzone z ❤️ w Stanach Zjednoczonych.",
+    "oss_attributions": "Atrybucje Open Source",
+    "nominatim_1": "Wyszukiwanie lokalizacji i geokodowanie zapewnia",
+    "nominatim_2": "Ich dane są licencjonowane na licencji ODbL.",
+    "other_attributions": "Dodatkowe atrybucje można znaleźć w pliku README.",
+    "close": "Zamknij"
   },
   "home": {
-	"hero_1": "Odkryj najbardziej ekscytujące podróże na świecie",
-	"hero_2": "Odkrywaj i planuj swoją kolejną podróż z AdventureLog. Poznaj zapierające dech w piersiach miejsca, twórz spersonalizowane plany podróży i bądź w kontakcie w trakcie podróży.",
-	"go_to": "Przejdź do AdventureLog",
-	"key_features": "Najważniejsze funkcje",
-	"desc_1": "Odkrywaj, planuj i eksploruj z łatwością",
-	"desc_2": "AdventureLog został zaprojektowany, aby uprościć Twoją podróż, oferując narzędzia i zasoby do planowania, pakowania i poruszania się po niezapomnianej podróży.",
-	"feature_1": "Dziennik podróży",
-	"feature_1_desc": "Śledź swoje podróże dzięki spersonalizowanemu dziennikowi podróży i dziel się swoimi doświadczeniami z przyjaciółmi i rodziną.",
-	"feature_2": "Planowanie podróży",
-	"feature_2_desc": "Łatwo twórz spersonalizowane plany podróży i uzyskaj szczegółowy rozkład swojego wyjazdu na każdy dzień.",
-	"feature_3": "Mapa podróży",
-	"feature_3_desc": "Zobacz swoje podróże na całym świecie dzięki interaktywnej mapie i odkrywaj nowe miejsca."
+    "hero_1": "Odkryj najbardziej ekscytujące podróże na świecie",
+    "hero_2": "Odkrywaj i planuj swoją kolejną podróż z AdventureLog. Poznaj zapierające dech w piersiach miejsca, twórz spersonalizowane plany podróży i bądź w kontakcie w trakcie podróży.",
+    "go_to": "Przejdź do AdventureLog",
+    "key_features": "Najważniejsze funkcje",
+    "desc_1": "Odkrywaj, planuj i eksploruj z łatwością",
+    "desc_2": "AdventureLog został zaprojektowany, aby uprościć Twoją podróż, oferując narzędzia i zasoby do planowania, pakowania i poruszania się po niezapomnianej podróży.",
+    "feature_1": "Dziennik podróży",
+    "feature_1_desc": "Śledź swoje podróże dzięki spersonalizowanemu dziennikowi podróży i dziel się swoimi doświadczeniami z przyjaciółmi i rodziną.",
+    "feature_2": "Planowanie podróży",
+    "feature_2_desc": "Łatwo twórz spersonalizowane plany podróży i uzyskaj szczegółowy rozkład swojego wyjazdu na każdy dzień.",
+    "feature_3": "Mapa podróży",
+    "feature_3_desc": "Zobacz swoje podróże na całym świecie dzięki interaktywnej mapie i odkrywaj nowe miejsca."
   },
   "adventures": {
-	"collection_remove_success": "Podróż została pomyślnie usunięta z kolekcji!",
-	"collection_remove_error": "Błąd podczas usuwania podróży z kolekcji",
-	"collection_link_success": "Podróż została pomyślnie dodana do kolekcji!",
-	"no_image_found": "Nie znaleziono obrazu",
-	"collection_link_error": "Błąd podczas dodawania podróży do kolekcji",
-	"adventure_delete_confirm": "Czy na pewno chcesz usunąć tę podróż? Ta operacja jest nieodwracalna.",
-	"open_details": "Otwórz szczegóły",
-	"edit_adventure": "Edytuj podróż",
-	"remove_from_collection": "Usuń z kolekcji",
-	"add_to_collection": "Dodaj do kolekcji",
-	"delete": "Usuń",
-	"not_found": "Podróż nie znaleziona",
-	"not_found_desc": "Podróży, której szukasz, nie można znaleźć. Spróbuj poszukać innej podróży lub sprawdź później.",
-	"homepage": "Strona główna",
-	"adventure_details": "Szczegóły podróży",
-	"collection": "Kolekcja",
-	"adventure_type": "Typ podróży",
-	"longitude": "Długość geograficzna",
-	"latitude": "Szerokość geograficzna",
-	"visit": "Odwiedź",
-	"visits": "Odwiedziny",
-	"create_new": "Utwórz nową...",
-	"adventure": "Podróż",
-	"count_txt": "wyniki pasujące do Twojego wyszukiwania",
-	"sort": "Sortuj",
-	"order_by": "Sortuj według",
-	"order_direction": "Kierunek sortowania",
-	"ascending": "Rosnąco",
-	"descending": "Malejąco",
-	"updated": "Zaktualizowano",
-	"name": "Nazwa",
-	"date": "Data",
-	"activity_types": "Rodzaje aktywności",
-	"tags": "Tagi",
-	"add_a_tag": "Dodaj tag",
-	"date_constrain": "Ogranicz do dat kolekcji",
-	"rating": "Ocena",
-	"my_images": "Moje obrazy",
-	"add_an_activity": "Dodaj aktywność",
-	"no_images": "Brak obrazów",
-	"upload_images_here": "Prześlij obrazy tutaj",
-	"share_adventure": "Podziel się tą podróżą!",
-	"copy_link": "Kopiuj link",
-	"image": "Obraz",
-	"upload_image": "Prześlij obraz",
-	"url": "URL",
-	"fetch_image": "Pobierz obraz",
-	"wikipedia": "Wikipedia",
-	"add_notes": "Dodaj notatki",
-	"warning": "Ostrzeżenie",
-	"my_adventures": "Moje podróże",
-	"no_linkable_adventures": "Nie znaleziono podróży, które można połączyć z tą kolekcją.",
-	"add": "Dodaj",
-	"save_next": "Zapisz i następny",
-	"end_date": "Data zakończenia",
-	"my_visits": "Moje wizyty",
-	"start_date": "Data rozpoczęcia",
-	"remove": "Usuń",
-	"location": "Lokalizacja",
-	"search_for_location": "Szukaj lokalizacji",
-	"clear_map": "Wyczyść mapę",
-	"search_results": "Wyniki wyszukiwania",
-	"no_results": "Nie znaleziono wyników",
-	"wiki_desc": "Pobiera fragment artykułu z Wikipedii pasującego do nazwy podróży.",
-	"generate_desc": "Generuj opis",
-	"public_adventure": "Publiczna podróż",
-	"location_information": "Informacje o lokalizacji",
-	"link": "Link",
-	"links": "Linki",
-	"description": "Opis",
-	"sources": "Źródła",
-	"collection_adventures": "Uwzględnij podróże z kolekcji",
-	"filter": "Filtr",
-	"category_filter": "Filtr kategorii",
-	"category": "Kategoria",
-	"select_adventure_category": "Wybierz kategorię podróży",
-	"clear": "Wyczyść",
-	"my_collections": "Moje kolekcje",
-	"open_filters": "Otwórz filtry",
-	"close_filters": "Zamknij filtry",
-	"archived_collections": "Zarchiwizowane kolekcje",
-	"share": "Podziel się",
-	"private": "Prywatne",
-	"public": "Publiczne",
-	"archived": "Zarchiwizowane",
-	"edit_collection": "Edytuj kolekcję",
-	"unarchive": "Przywróć z archiwum",
-	"archive": "Archiwizuj",
-	"no_collections_found": "Nie znaleziono kolekcji, do których można dodać tę podróż.",
-	"not_visited": "Nie odwiedzone",
-	"archived_collection_message": "Kolekcja została pomyślnie zarchiwizowana!",
-	"unarchived_collection_message": "Kolekcja została pomyślnie przywrócona z archiwum!",
-     "delete_collection_success": "Kolekcja została pomyślnie usunięta!",
+    "collection_remove_success": "Podróż została pomyślnie usunięta z kolekcji!",
+    "collection_remove_error": "Błąd podczas usuwania podróży z kolekcji",
+    "collection_link_success": "Podróż została pomyślnie dodana do kolekcji!",
+    "no_image_found": "Nie znaleziono obrazu",
+    "collection_link_error": "Błąd podczas dodawania podróży do kolekcji",
+    "adventure_delete_confirm": "Czy na pewno chcesz usunąć tę podróż? Ta operacja jest nieodwracalna.",
+    "open_details": "Otwórz szczegóły",
+    "edit_adventure": "Edytuj podróż",
+    "remove_from_collection": "Usuń z kolekcji",
+    "add_to_collection": "Dodaj do kolekcji",
+    "delete": "Usuń",
+    "not_found": "Podróż nie znaleziona",
+    "not_found_desc": "Podróży, której szukasz, nie można znaleźć. Spróbuj poszukać innej podróży lub sprawdź później.",
+    "homepage": "Strona główna",
+    "adventure_details": "Szczegóły podróży",
+    "collection": "Kolekcja",
+    "adventure_type": "Typ podróży",
+    "longitude": "Długość geograficzna",
+    "latitude": "Szerokość geograficzna",
+    "visit": "Odwiedź",
+    "visits": "Odwiedziny",
+    "create_new": "Utwórz nową...",
+    "adventure": "Podróż",
+    "count_txt": "wyniki pasujące do Twojego wyszukiwania",
+    "sort": "Sortuj",
+    "order_by": "Sortuj według",
+    "order_direction": "Kierunek sortowania",
+    "ascending": "Rosnąco",
+    "descending": "Malejąco",
+    "updated": "Zaktualizowano",
+    "name": "Nazwa",
+    "date": "Data",
+    "activity_types": "Rodzaje aktywności",
+    "tags": "Tagi",
+    "add_a_tag": "Dodaj tag",
+    "date_constrain": "Ogranicz do dat kolekcji",
+    "rating": "Ocena",
+    "my_images": "Moje obrazy",
+    "add_an_activity": "Dodaj aktywność",
+    "no_images": "Brak obrazów",
+    "upload_images_here": "Prześlij obrazy tutaj",
+    "share_adventure": "Podziel się tą podróżą!",
+    "copy_link": "Kopiuj link",
+    "image": "Obraz",
+    "upload_image": "Prześlij obraz",
+    "url": "URL",
+    "fetch_image": "Pobierz obraz",
+    "wikipedia": "Wikipedia",
+    "add_notes": "Dodaj notatki",
+    "warning": "Ostrzeżenie",
+    "my_adventures": "Moje podróże",
+    "no_linkable_adventures": "Nie znaleziono podróży, które można połączyć z tą kolekcją.",
+    "add": "Dodaj",
+    "save_next": "Zapisz i następny",
+    "end_date": "Data zakończenia",
+    "my_visits": "Moje wizyty",
+    "start_date": "Data rozpoczęcia",
+    "remove": "Usuń",
+    "location": "Lokalizacja",
+    "search_for_location": "Szukaj lokalizacji",
+    "clear_map": "Wyczyść mapę",
+    "search_results": "Wyniki wyszukiwania",
+    "no_results": "Nie znaleziono wyników",
+    "wiki_desc": "Pobiera fragment artykułu z Wikipedii pasującego do nazwy podróży.",
+    "generate_desc": "Generuj opis",
+    "public_adventure": "Publiczna podróż",
+    "location_information": "Informacje o lokalizacji",
+    "link": "Link",
+    "links": "Linki",
+    "description": "Opis",
+    "sources": "Źródła",
+    "collection_adventures": "Uwzględnij podróże z kolekcji",
+    "filter": "Filtr",
+    "category_filter": "Filtr kategorii",
+    "category": "Kategoria",
+    "select_adventure_category": "Wybierz kategorię podróży",
+    "clear": "Wyczyść",
+    "my_collections": "Moje kolekcje",
+    "open_filters": "Otwórz filtry",
+    "close_filters": "Zamknij filtry",
+    "archived_collections": "Zarchiwizowane kolekcje",
+    "share": "Podziel się",
+    "private": "Prywatne",
+    "public": "Publiczne",
+    "archived": "Zarchiwizowane",
+    "edit_collection": "Edytuj kolekcję",
+    "unarchive": "Przywróć z archiwum",
+    "archive": "Archiwizuj",
+    "no_collections_found": "Nie znaleziono kolekcji, do których można dodać tę podróż.",
+    "not_visited": "Nie odwiedzone",
+    "archived_collection_message": "Kolekcja została pomyślnie zarchiwizowana!",
+    "unarchived_collection_message": "Kolekcja została pomyślnie przywrócona z archiwum!",
+    "delete_collection_success": "Kolekcja została pomyślnie usunięta!",
     "delete_collection_warning": "Czy na pewno chcesz usunąć tę kolekcję? Spowoduje to również usunięcie wszystkich powiązanych podróży. Ta akcja jest nieodwracalna.",
     "cancel": "Anuluj",
     "delete_collection": "Usuń kolekcję",
@@ -211,32 +212,32 @@
     "nothing_planned": "Nic nie zaplanowane na ten dzień. Ciesz się podróżą!",
     "days": "dni",
     "activities": {
-		"general": "Ogólne 🌍",
-		"outdoor": "Na świeżym powietrzu 🏞️",
-		"lodging": "Zakwaterowanie 🛌",
-		"dining": "Posiłki 🍽️",
-		"activity": "Aktywność 🏄",
-		"attraction": "Atrakcje 🎢",
-		"shopping": "Zakupy 🛍️",
-		"nightlife": "Życie nocne 🌃",
-		"event": "Wydarzenie 🎉",
-		"transportation": "Transport 🚗",
-		"culture": "Kultura 🎭",
-		"water_sports": "Sporty wodne 🚤",
-		"hiking": "Wędrówki 🥾",
-		"wildlife": "Dzika przyroda 🦒",
-		"historical_sites": "Miejsca historyczne 🏛️",
-		"music_concerts": "Muzyka i koncerty 🎶",
-		"fitness": "Fitness 🏋️",
-		"art_museums": "Sztuka i muzea 🎨",
-		"festivals": "Festiwale 🎪",
-		"spiritual_journeys": "Podróże duchowe 🧘‍♀️",
-		"volunteer_work": "Praca wolontariacka 🤝",
-		"other": "Inne"
+      "general": "Ogólne 🌍",
+      "outdoor": "Na świeżym powietrzu 🏞️",
+      "lodging": "Zakwaterowanie 🛌",
+      "dining": "Posiłki 🍽️",
+      "activity": "Aktywność 🏄",
+      "attraction": "Atrakcje 🎢",
+      "shopping": "Zakupy 🛍️",
+      "nightlife": "Życie nocne 🌃",
+      "event": "Wydarzenie 🎉",
+      "transportation": "Transport 🚗",
+      "culture": "Kultura 🎭",
+      "water_sports": "Sporty wodne 🚤",
+      "hiking": "Wędrówki 🥾",
+      "wildlife": "Dzika przyroda 🦒",
+      "historical_sites": "Miejsca historyczne 🏛️",
+      "music_concerts": "Muzyka i koncerty 🎶",
+      "fitness": "Fitness 🏋️",
+      "art_museums": "Sztuka i muzea 🎨",
+      "festivals": "Festiwale 🎪",
+      "spiritual_journeys": "Podróże duchowe 🧘‍♀️",
+      "volunteer_work": "Praca wolontariacka 🤝",
+      "other": "Inne"
     }
   },
   "worldtravel": {
-	"country_list": "Lista krajów",
+    "country_list": "Lista krajów",
     "num_countries": "znalezione kraje",
     "all": "Wszystkie",
     "partially_visited": "Częściowo odwiedzone",
@@ -263,7 +264,7 @@
     "public_tooltip": "Dzięki publicznemu profilowi użytkownicy mogą dzielić się z Tobą kolekcjami i oglądać Twój profil na stronie użytkowników."
   },
   "users": {
-	"no_users_found": "Nie znaleziono użytkowników z publicznymi profilami."
+    "no_users_found": "Nie znaleziono użytkowników z publicznymi profilami."
   },
   "settings": {
     "update_error": "Błąd podczas aktualizacji ustawień",
@@ -291,7 +292,9 @@
     "about_this_background": "O tym tle",
     "photo_by": "Zdjęcie autorstwa",
     "join_discord": "Dołącz do Discorda",
-    "join_discord_desc": "aby podzielić się swoimi zdjęciami. Zamieść je w kanale #travel-share."
+    "join_discord_desc": "aby podzielić się swoimi zdjęciami. Zamieść je w kanale #travel-share.",
+    "change_password_error": "Nie można zmienić hasła. \nNieprawidłowe bieżące hasło lub nieprawidłowe nowe hasło.",
+    "current_password": "Aktualne hasło"
   },
   "collection": {
     "collection_created": "Kolekcja została pomyślnie utworzona!",
@@ -316,7 +319,7 @@
     "invalid_url": "Nieprawidłowy URL"
   },
   "checklist": {
-	"checklist_deleted": "Lista kontrolna została pomyślnie usunięta!",
+    "checklist_deleted": "Lista kontrolna została pomyślnie usunięta!",
     "checklist_delete_error": "Błąd podczas usuwania listy kontrolnej",
     "failed_to_save": "Nie udało się zapisać listy kontrolnej",
     "checklist_editor": "Edytor listy kontrolnej",
@@ -346,14 +349,14 @@
     "to_location": "Miejsce docelowe",
     "edit": "Edytuj",
     "modes": {
-		"car": "Samochód",
-		"plane": "Samolot",
-		"train": "Pociąg",
-		"bus": "Autobus",
-		"boat": "Łódź",
-		"bike": "Rower",
-		"walking": "Pieszo",
-		"other": "Inne"
+      "car": "Samochód",
+      "plane": "Samolot",
+      "train": "Pociąg",
+      "bus": "Autobus",
+      "boat": "Łódź",
+      "bike": "Rower",
+      "walking": "Pieszo",
+      "other": "Inne"
     },
     "transportation_edit_success": "Transport edytowany pomyślnie!",
     "edit_transportation": "Edytuj transport",
@@ -380,36 +383,36 @@
     "unshared": "Nieudostępnione",
     "share_desc": "Udostępnij tę kolekcję innym użytkownikom.",
     "shared_with": "Współdzielone z",
-	"no_users_shared": "Brak użytkowników, którym udostępniono",
+    "no_users_shared": "Brak użytkowników, którym udostępniono",
     "not_shared_with": "Brak udostępnionych",
     "no_shared_found": "Brak kolekcji udostępnionych Tobie.",
-	"set_public": "Aby umożliwić użytkownikom udostępnianie Tobie, musisz ustawić swój profil jako publiczny.",
+    "set_public": "Aby umożliwić użytkownikom udostępnianie Tobie, musisz ustawić swój profil jako publiczny.",
     "go_to_settings": "Przejdź do ustawień"
   },
   "languages": {
-	"en": "Angielski",
-	"de": "Niemiecki",
-	"es": "Hiszpański",
-	"fr": "Francuski",
-	"it": "Włoski",
-	"nl": "Holenderski",
-	"sv": "Szwedzki",
-	"zh": "Chiński",
-	"pl": "Polski"
+    "en": "Angielski",
+    "de": "Niemiecki",
+    "es": "Hiszpański",
+    "fr": "Francuski",
+    "it": "Włoski",
+    "nl": "Holenderski",
+    "sv": "Szwedzki",
+    "zh": "Chiński",
+    "pl": "Polski"
   },
   "profile": {
-	"member_since": "Użytkownik od",
-	"user_stats": "Statystyki użytkownika",
-	"visited_countries": "Odwiedzone kraje",
-	"visited_regions": "Odwiedzone regiony"
+    "member_since": "Użytkownik od",
+    "user_stats": "Statystyki użytkownika",
+    "visited_countries": "Odwiedzone kraje",
+    "visited_regions": "Odwiedzone regiony"
   },
   "categories": {
-	"manage_categories": "Zarządzaj kategoriami",
-	"no_categories_found": "Brak kategorii.",
-	"edit_category": "Edytuj kategorię",
-	"icon": "Ikona",
-	"update_after_refresh": "Karty podróży zostaną zaktualizowane po odświeżeniu strony.",
-	"select_category": "Wybierz kategorię",
-	"category_name": "Nazwa kategorii"
+    "manage_categories": "Zarządzaj kategoriami",
+    "no_categories_found": "Brak kategorii.",
+    "edit_category": "Edytuj kategorię",
+    "icon": "Ikona",
+    "update_after_refresh": "Karty podróży zostaną zaktualizowane po odświeżeniu strony.",
+    "select_category": "Wybierz kategorię",
+    "category_name": "Nazwa kategorii"
   }
 }
