--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -294,7 +294,8 @@
     "join_discord_desc": "um Ihre eigenen Fotos zu teilen. \nVeröffentlichen Sie sie im",
     "photo_by": "Foto von",
     "change_password_error": "Passwort kann nicht geändert werden. \nUngültiges aktuelles Passwort oder ungültiges neues Passwort.",
-    "current_password": "Aktuelles Passwort"
+    "current_password": "Aktuelles Passwort",
+    "password_change_lopout_warning": "Nach der Passwortänderung werden Sie abgemeldet."
   },
   "checklist": {
     "add_item": "Artikel hinzufügen",
