Add calendar route and integrate calendar component in Navbar

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -19,6 +19,7 @@
 		"discord": "Discord",
 		"language_selection": "Language",
 		"support": "Support",
+		"calendar": "Calendar",
 		"theme_selection": "Theme Selection",
 		"themes": {
 			"light": "Light",
